WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283745
Fix debug assertions introduced by
287107@main
https://bugs.webkit.org/show_bug.cgi?id=283745
Summary
Fix debug assertions introduced by 287107@main
Tim Nguyen (:ntim)
Reported
2024-11-27 00:53:48 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-27 01:29:36 PST
<
rdar://problem/140613216
>
Tim Nguyen (:ntim)
Comment 2
2024-11-27 01:31:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37184
EWS
Comment 3
2024-11-27 09:13:24 PST
Committed
287128@main
(1f3630a70928): <
https://commits.webkit.org/287128@main
> Reviewed commits have been landed. Closing PR #37184 and removing active labels.
Fujii Hironori
Comment 4
2024-11-27 12:30:35 PST
Not only debug builds, but also release builds were crashing.
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-lists%2Flist-style-type-string-007.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-lists%2Flist-style-type-string-002.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-lists%2Flist-style-type-string-003.html&platform=mac&platform=visionos&platform=ios
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug