Fix debug crashes introduced by 287107@main https://bugs.webkit.org/show_bug.cgi?id=283745 rdar://140613216

Reviewed by Fujii Hironori.

Revert parts where we using a temporary string for `textWithSuffix`, go back to the old approach of getting substrings of the full string.

Also add a missing bounds check for `list-style: ""`.

These tests were crashing (first 4 were due to the temporary string, last 2 were due to the missing bounds check):

accessibility/mac/attributed-string-with-listitem-multiple-lines.html
accessibility/mac/listmarker-suffix.html
accessibility/mac/string-range-contains-listmarker.html
accessibility/mac/text-marker-range-selection-in-list-items.html
imported/w3c/web-platform-tests/css/css-lists/list-style-type-string-003.html
imported/w3c/web-platform-tests/css/css-lists/list-style-type-string-007.html

* Source/WebCore/rendering/RenderListMarker.cpp:
(WebCore::textRunForContent):
(WebCore::RenderListMarker::updateContent):
* Source/WebCore/rendering/RenderListMarker.h:
(WebCore::ListMarkerTextContent::isEmpty const):
(WebCore::ListMarkerTextContent::textWithoutSuffix const):
(WebCore::ListMarkerTextContent::suffix const):
(WebCore::ListMarkerTextContent::textWithSuffix const): Deleted.

Canonical link: https://commits.webkit.org/287128@main